<package format="2">
<name>sensor_visualizer_cpp</name>
<version>0.0.0</version>
<description>The sensor_visualizer_cpp package</description>
<maintainer email="vboxuser@todo.todo">vboxuser</maintainer>
<license>TODO</license>
  
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>visualization_msgs</build_depend>
  
<exec_depend>roscpp</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>visualization_msgs</exec_depend>
  
<buildtool_depend>catkin</buildtool_depend>
<export> </export>
</package>
